--- a/calculator/Cargo.toml
+++ b/calculator/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
+wit-bindgen = "0.53.1"
 
 [package.metadata.component]
 package = "docs:calculator"
